@@ -62,6 +62,8 @@ Date: 2024-12-08
     - Added longer-handed inserters, to deal with bigger and bigger recipes!
     - Added a new achievement for using a combat bot.
     - Added a new type of damage, Penetrative, which is used by shotgun shells/slugs or genevas neglection ammo. smaller biters and nests are weaker to it, while spitters and worms are resistant to it.
+    - Made basic/piercing shotgun pellets one damage weaker.
+    - Made basic slugs fire 3, and piercing  slugs fire 2.
 
   Changes:
     - Changed CRT's recipe to take CRT framing and screens.
